--- a/ChurnR/ChurnR.csproj
+++ b/ChurnR/ChurnR.csproj
@@ -5,6 +5,16 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+
+        <Version>1.0.0</Version>
+        <Authors>Christoph Kopf</Authors>
+        
+        <!-- .NET tool -->
+        <PackAsTool>true</PackAsTool>
+        <IsPackable>true</IsPackable>
+        <ToolCommandName>ChurnR</ToolCommandName>
+        <PackageOutputPath>./nupkg</PackageOutputPath>
+        <PackageId>Kopfrechner.ChurnR</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
