--- a/ChurnR/ChurnR.csproj
+++ b/ChurnR/ChurnR.csproj
@@ -7,7 +7,7 @@
         <Nullable>enable</Nullable>
 
         <Version>0.0.0</Version>
-        <Authors>Christoph Kopf</Authors>
+        <Authors>Christoph Kopf;Dotan Nahum</Authors>
         
         <!-- .NET tool -->
         <PackAsTool>true</PackAsTool>
