--- a/ChurnR/ChurnR.csproj
+++ b/ChurnR/ChurnR.csproj
@@ -7,16 +7,20 @@
         <Nullable>enable</Nullable>
 
         <Version>0.0.0</Version>
-        <Authors>Christoph Kopf;Dotan Nahum</Authors>
-        
-        <!-- .NET tool -->
+        <Authors>Christoph Kopf</Authors>
+    </PropertyGroup>
+
+    <!-- .NET tool -->
+    <PropertyGroup>
         <PackAsTool>true</PackAsTool>
         <IsPackable>true</IsPackable>
         <ToolCommandName>ChurnR</ToolCommandName>
         <PackageOutputPath>./nupkg</PackageOutputPath>
         <PackageId>Kopfrechner.ChurnR</PackageId>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/kopfrechner/churnR</RepositoryUrl>
     </PropertyGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\ChurnR.Core\ChurnR.Core.csproj" />
     </ItemGroup>
