--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Verify commit exists in origin/main
+      - name: Verify commit exists in origin/master
         run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
-          git branch --remote --contains | grep origin/main
+          git branch --remote --contains | grep origin/master
       - name: Set VERSION variable from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       - name: Build
@@ -22,6 +22,6 @@ jobs:
       - name: Pack
         run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
       - name: Push
-        run: dotnet nuget push Kopfrechner.ChurnR.${VERSION}.nupkg --source https://nuget.pkg.github.com/kopfrechner/index.json --api-key ${GITHUB_TOKEN}
+        run: dotnet nuget push kopfrechner.ChurnR.${VERSION}.nupkg --source https://nuget.pkg.github.com/kopfrechner/index.json --api-key ${GITHUB_TOKEN}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
