change nuget feed

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Pack
         run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
       - name: Push
-        run: dotnet nuget push kopfrechner.ChurnR.${VERSION}.nupkg --source https://nuget.pkg.github.com/kopfrechner/index.json --api-key ${GITHUB_TOKEN}
+        run: dotnet nuget push kopfrechner.ChurnR.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_ORG_TOKEN}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NUGET_ORG_TOKEN: ${{ secrets.NUGET_API_KEY }}
