--- a/ChurnR/ChurnR.csproj
+++ b/ChurnR/ChurnR.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
+        <None Include="appsettings.json" Pack="true" PackagePath="\" CopyToOutputDirectory="PreserveNewest"/>
     </ItemGroup>
     
     <ItemGroup>
@@ -35,7 +36,11 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Serilog" Version="3.1.1" />
+      <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+      <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
