--- a/ChurnR/ChurnR.csproj
+++ b/ChurnR/ChurnR.csproj
@@ -24,6 +24,9 @@
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
+    
+    <ItemGroup>
         <None Include="appsettings.json" Pack="true" PackagePath="\" CopyToOutputDirectory="PreserveNewest"/>
     </ItemGroup>
     
