--- a/ChurnR.Core/ChurnR.Core.csproj
+++ b/ChurnR.Core/ChurnR.Core.csproj
@@ -9,5 +9,8 @@
     <ItemGroup>
       <PackageReference Include="Serilog" Version="3.1.1" />
     </ItemGroup>
-
+    
+    <ItemGroup>
+        <None Include="Reporter\Templates\ChurnR_ChartJs_Report_Template.html" Pack="true" PackagePath="\Templates" CopyToOutputDirectory="PreserveNewest"/>
+    </ItemGroup>
 </Project>
